--- a/thanos.theme.css
+++ b/thanos.theme.css
@@ -1,1 +1,8 @@
+//META{"name":"thanos theme","description":"infinity war themes","author":"Reuben","version":"1.0"}*//{}
 
+@import url(https://rawgit.com/gco360/windows-10-theme/master/windows10.css);
+
+:root{
+    --background-image: url(https://qph.fs.quoracdn.net/main-qimg-cddbfdf297da99213032a80e407c1959-c);
+    --background-brightness: 0.6;
+}
