--- a/thanos.theme.css
+++ b/thanos.theme.css
@@ -3,6 +3,6 @@
 @import url(https://rawgit.com/gco360/thanos-theme/master/thanos.css);
 
 :root{
-    --background-image: url(https://qph.fs.quoracdn.net/main-qimg-cddbfdf297da99213032a80e407c1959-c);
+    --background-image: url(https://images5.alphacoders.com/907/thumb-1920-907053.jpg);
     --background-brightness: 0.6;
 }
