--- a/thanos.css
+++ b/thanos.css
@@ -32,3 +32,21 @@ background: var(--background-image);background-position: center;;background-size
     background-color: rgba(155, 19, 245, 0.6);
     color: #fff;
 }
+.guilds-wrapper .guilds-error:hover {
+    background-color: #9a00ff;
+}
+.guilds-wrapper .guilds-error {
+    -webkit-box-sizing: border-box;
+    background: #ab00ff;
+    border-radius: 25px;
+    box-sizing: border-box;
+    color: #fff!important;
+    display: block;
+    font-size: 20px;
+    font-weight: 700;
+    height: 50px;
+    line-height: 46px;
+    padding: 0;
+    text-align: center;
+    width: 50px;
+}
