--- a/thanos.css
+++ b/thanos.css
@@ -50,3 +50,12 @@ background: var(--background-image);background-position: center;;background-size
     text-align: center;
     width: 50px;
 }
+.guilds-wrapper .guilds .friends-icon {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Symbol_from_Marve…_Avengers_logo.svg/2000px-Symbol_from_Marvel%27s_The_Avengers_logo.svg.png);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: 40px 40px;
+    height: 50px;
+    width: 50px;
+    background-color: red;
+}
