--- a/thanos.css
+++ b/thanos.css
@@ -59,3 +59,7 @@ background: var(--background-image);background-position: center;;background-size
     width: 50px;
     background-color: red;
 }
+.tooltip.tooltip-red {
+    background-color: #aa00f5;
+    color: #fef6f6;
+}
