--- a/thanos.css
+++ b/thanos.css
@@ -66,3 +66,29 @@ background: var(--background-image);background-position: center;;background-size
 .tooltip.tooltip-red.tooltip-right:after {
     border-right-color: #a800ff;
 }
+.noticeInfo-3_iTE1 {
+    background-color: rgb(47, 49, 54);
+    color: #fff;
+}
+.message-group .avatar-large[style*="314206160477749250"] ~ .comment .message h2 span.username-wrapper::after {
+    background-color: #faa61a !important;
+    padding: 0px 4px;
+    border: 2px outset rgba(255, 255, 255, 0.01);
+    content: "patreon";
+    text-transform: uppercase;
+    display: inline-block;
+    margin-left: 4px;
+    font-size: small;
+    text-shadow: 0 0 2px rgba(255, 255, 255, 0);
+}
+.message-group .avatar-large[style*="306060056271519745"] ~ .comment .message h2 span.username-wrapper::after {
+    background-color: #faa61a !important;
+    padding: 0px 4px;
+    border: 2px outset rgba(255, 255, 255, 0.01);
+    content: "Theme developer";
+    text-transform: uppercase;
+    display: inline-block;
+    margin-left: 4px;
+    font-size: small;
+    text-shadow: 0 0 2px rgba(255, 255, 255, 0);
+}
