--- a/thanos.css
+++ b/thanos.css
@@ -91,3 +91,10 @@ background: var(--background-image);background-position: center;;background-size
     color: #980cff;
     text-decoration: none;
 }
+.mention {
+    -webkit-transition: background-color .05s,color .05s;
+    background: #f04747;
+    color: #7f409e;
+    font-weight: 500;
+    transition: background-color .05s,color .05s;
+}
