--- a/thanos.css
+++ b/thanos.css
@@ -110,3 +110,7 @@ background: var(--background-image);background-position: center;;background-size
     height: 10px;
     margin-top: -6px;
 }
+.private-channels .channel.selected a {
+    background-color: #43b581;
+    color: #fff;
+}
