--- a/thanos.css
+++ b/thanos.css
@@ -114,3 +114,7 @@ background: var(--background-image);background-position: center;;background-size
     background-color: #43b581;
     color: #fff;
 }
+.private-channels .channel:hover a {
+    background-color: #3a71c1;
+    color: #fff;
+}
