--- a/thanos.css
+++ b/thanos.css
@@ -99,6 +99,13 @@ background: var(--background-image);background-position: center;;background-size
     height: 10px;
     margin-top: -6px;
 }
+.mention {
+    -webkit-transition: background-color .05s,color .05s;
+    background: rgba(240, 71, 71, 0);
+    color: #7f409e;
+    font-weight: 500;
+    transition: background-color .05s,color .05s;
+}
 .private-channels .channel.selected a {
     background-color: #43b581;
     color: #fff;
@@ -106,4 +113,9 @@ background: var(--background-image);background-position: center;;background-size
 .private-channels .channel:hover a {
     background-color: #3a71c1;
     color: #fff;
+}
+.mention:hover {
+    background-color: #7289da;
+    color: #9300ff;
+    cursor: pointer;
 }
