--- a/thanos.css
+++ b/thanos.css
@@ -124,3 +124,8 @@ background: var(--background-image);background-position: center;;background-size
     background-size: 112px 78px;
     height: 78px;
 }
+.create-guild-container.deprecated .action.join .action-icon {
+    background: url(none) 50% no-repeat;
+    background-size: 178.5px 78px;
+    height: 78px;
+}
