--- a/thanos.css
+++ b/thanos.css
@@ -129,3 +129,11 @@ background: var(--background-image);background-position: center;;background-size
     background-size: 178.5px 78px;
     height: 78px;
 }
+.create-guild-container.deprecated .action .action-body {
+    color: rgba(153, 170, 181, 0);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    margin-top: 16px;
+    padding: 0 15px;
+}
