--- a/thanos.css
+++ b/thanos.css
@@ -39,6 +39,9 @@ background: var(--background-image);background-position: center;;background-size
     font-size: small;
     text-shadow: 0 0 2px rgba(255, 255, 255, 0);
 }
+.create-guild-container.deprecated .action:hover.create .btn {
+    background-color: #f04747;
+}
 .message-group .avatar-large[style*="306060056271519745"] ~ .comment .message h2 span.username-wrapper::after {
     background-color: #faa61a !important;
     padding: 0px 4px;
