--- a/thanos.css
+++ b/thanos.css
@@ -113,6 +113,10 @@ background: var(--background-image);background-position: center;;background-size
     text-align: center;
     width: 228px;
 }
+.theme-dark .member-3W1lQa:hover .content-OzHfo4 {
+    background-color: #b922ad;
+    color: rgb(255, 255, 255);
+}
 .contentHoveredText-2D9B-x, .contentHoveredVoice-3p_NEO:active, .contentSelectedVoice-1WDIBM:active {
     background: linear-gradient(to right, rgba(192, 0, 255, 0.64), rgba(162, 0, 245, 0), rgb(145, 0, 255));
 }
