--- a/thanos.css
+++ b/thanos.css
@@ -186,6 +186,21 @@ background: var(--background-image);background-position: center;;background-size
     background-color: hsla(218, 5%, 47%, 0);
     border: 2px solid purple;
 }
+.uploadModal-2ifh8j .footer-3mqk7D {
+    -ms-flex-direction: row;
+    -ms-flex-pack: end;
+    -webkit-box-direction: normal;
+    -webkit-box-orient: horizontal;
+    -webkit-box-pack: end;
+    background-color: rgba(91, 109, 174, 0);
+    border-radius: 0 0 10px 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding: 10px;
+}
 body.bd-blue .app::before {
   content: "Please disable \"BetterDiscord Blue\" mode in BetterDiscord settings.";
   height: 36px;
