--- a/thanos.css
+++ b/thanos.css
@@ -78,6 +78,9 @@ background: var(--background-image);background-position: center;;background-size
     padding: 30px 24px;
     width: 520px;
 }
+.theme-dark .typing-2GQL18 span {
+    color: hsla(288, 97%, 47%, 0.8);
+}
 .theme-dark .cardPrimary-1Hv-to {
     background: rgba(32, 34, 37, 0);
     border-color: rgba(32, 34, 37, 0);
