--- a/thanos.css
+++ b/thanos.css
@@ -283,3 +283,7 @@ div.platform-osx .side-8zPYf6 .item-PXvHYJ:nth-of-type(7), div.platform-win .sid
     0%   {top: 0px; background: red; width: 1000px;}
     100% {top: 0px; background: purple; width: 1000px;}
 }
+.theme-dark .wrapper-35wsBm {
+    background: rgba(47, 49, 54, 0);
+    border-color: rgba(47, 49, 54, 0);
+}
