--- a/thanos.css
+++ b/thanos.css
@@ -132,6 +132,19 @@ background: var(--background-image);background-position: center;;background-size
 .contentHoveredText-2D9B-x, .contentHoveredVoice-3p_NEO:active, .contentSelectedVoice-1WDIBM:active {
     background: linear-gradient(to right, rgba(192, 0, 255, 0.64), rgba(162, 0, 245, 0), rgb(145, 0, 255));
 }
+#bd-settings-sidebar .ui-tab-bar-header {
+    color: #43b581;
+    padding: 6px 10px;
+    font-size: 20px;
+    line-height: 16px;
+    text-transform: uppercase;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    flex-shrink: 0;
+    font-weight: 500;
+    font-family: fantasy;
+}
 .guilds-wrapper .guilds .guild.unread:before {
     background: #f04747;
     border-radius: 5px;
