--- a/thanos.css
+++ b/thanos.css
@@ -53,6 +53,14 @@ background: var(--background-image);background-position: center;;background-size
 .create-guild-container.deprecated .action:hover.create .btn {
     background-color: #f04747;
 }
+.avatar-xxlarge {
+    background-size: 100px 100px;
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    left: 310px;
+    top: 29px;
+}
 .message-group .avatar-large[style*="306060056271519745"] ~ .comment .message h2 span.username-wrapper::after {
     background-color: #faa61a !important;
     padding: 0px 4px;
