--- a/thanos.css
+++ b/thanos.css
@@ -61,6 +61,10 @@ background: var(--background-image);background-position: center;;background-size
     left: 310px;
     top: 29px;
 }
+.lookFilled-1Gx00P.colorBrand-3pXr91 {
+    background-color: #43b581;
+    color: #fff;
+}
 .message-group .avatar-large[style*="306060056271519745"] ~ .comment .message h2 span.username-wrapper::after {
     background-color: #faa61a !important;
     padding: 0px 4px;
