--- a/thanos.css
+++ b/thanos.css
@@ -155,6 +155,10 @@ background: var(--background-image);background-position: center;;background-size
     font-weight: 500;
     font-family: fantasy;
 }
+.theme-dark .message-group .comment .markup pre {
+    background: rgba(47, 49, 54, 0);
+    border: 2px solid black;
+}
 .guilds-wrapper .guilds .guild.unread:before {
     background: #f04747;
     border-radius: 5px;
