--- a/thanos.css
+++ b/thanos.css
@@ -352,3 +352,11 @@ div.platform-osx .side-8zPYf6 .item-PXvHYJ:nth-of-type(7), div.platform-win .sid
     border-radius: 5px;
     margin-left: 10px;
 }
+.role-2irmRk {
+    -webkit-box-sizing: border-box;
+    border: 0px;
+    border-radius: 11px;
+    height: 22px;
+    margin: 0 4px 4px 0;
+    padding: 4px;
+}
