--- a/thanos.css
+++ b/thanos.css
@@ -55,6 +55,9 @@ background: var(--background-image);background-position: center;;background-size
     background-color: rgba(54, 57, 63, 0);
     box-shadow: 0 0 0 1px rgba(32, 34, 37, 0), 0 2px 10px 0 rgba(0,0,0,.2);
 }
+.theme-dark .noChannel-Z1DQK7 {
+    background: rgba(54, 57, 63, 0);
+}
 .create-guild-container.deprecated .action:hover.create .btn {
     background-color: #f04747;
 }
