--- a/thanos.css
+++ b/thanos.css
@@ -58,6 +58,11 @@ background: var(--background-image);background-position: center;;background-size
 .theme-dark .noChannel-Z1DQK7 {
     background: rgba(54, 57, 63, 0);
 }
+.theme-dark .footer-2yfCgX {
+    -webkit-box-shadow: inset 0 1px 0 rgba(47, 49, 54, 0);
+    background-color: rgba(47, 49, 54, 0);
+    box-shadow: inset 0 1px 0 rgba(47,49,54,.6);
+}
 .create-guild-container.deprecated .action:hover.create .btn {
     background-color: #f04747;
 }
