--- a/thanos.css
+++ b/thanos.css
@@ -50,6 +50,15 @@ background: var(--background-image);background-position: center;;background-size
     width: 6px;
     background-color: #18f5f5;
 }
+.role-2irmRk {
+    -webkit-box-sizing: border-box;
+    border: 0px;
+    border-radius: 0px;
+    height: 22px;
+    margin: 0 px 6px 0;
+    padding: 4px;
+    font-size: large;
+}
 .theme-dark .modal-3HD5ck {
     -webkit-box-shadow: 0 0 0 1px rgba(32, 34, 37, 0), 0 2px 10px 0 rgba(0,0,0,.2);
     background-color: rgba(54, 57, 63, 0);
