--- a/thanos.css
+++ b/thanos.css
@@ -137,11 +137,12 @@ background: var(--background-image);background-position: center;;background-size
     background: rgba(40, 43, 48, 0) url(/assets/1988164a7c55346d32117b151f4e319d.svg) no-repeat 155px 50%;
 }
 .chat .avatar-large {
+    -webkit-transition: opacity .2s ease;
     cursor: pointer;
     opacity: 1;
     transition: opacity .2s ease;
-    height: 80px;
-    width: 80px;
+    height: 90px;
+    width: 90px;
     background-repeat: none;
     background-size: cover;
     background-position: center;
