--- a/thanos.css
+++ b/thanos.css
@@ -59,6 +59,15 @@ background: var(--background-image);background-position: center;;background-size
     background: rgba(65, 68, 73, 0);
     border-color: transparent;
 }
+.bda-slist li {
+    background: rgba(0, 0, 0, 0);
+    border: 1px solid rgba(54, 57, 63, 0);
+    border-radius: 5px;
+    padding: 5px 7px;
+    max-height: 175px;
+    margin-bottom: 20px;
+    overflow: hidden;
+}
 .message-group .edit-message {
     margin: 6px -6px 0 -130px;
     padding-bottom: 2px;
