--- a/thanos.css
+++ b/thanos.css
@@ -92,6 +92,11 @@ background: var(--background-image);background-position: center;;background-size
     padding: 4px;
     font-size: large;
 }
+.lookFilled-1Gx00P.colorRed-1TFJan, .lookOutlined-3sRXeN.colorRed-1TFJan, [class="itemDefault-3Jdr52 item-PXvHYJ notSelected-1N1G5p"][style*="color: rgb(240, 71, 71);"] {
+    background-color: rgba(255, 0, 0, 0) !important;
+    color: #fff !important;
+    border: 2px solid #7289da;
+}
 .lookFilled-1Gx00P.colorBrand-3pXr91:hover {
     background-color: #faa61a;
 }
