--- a/thanos.css
+++ b/thanos.css
@@ -61,6 +61,10 @@ background: var(--background-image);background-position: center;;background-size
     from {background-color:#000000;}
     to {background-color: rgba(32, 34, 37, 0)}
 }
+.theme-dark .friends-table .messages .divider.divider-red>div, .theme-dark .messages-wrapper .messages .divider.divider-red>div {
+    background: rgba(240, 71, 71, 0);
+    opacity: .4;
+}
 .theme-dark #friends .friends-table .friends-row:hover {
     background: rgba(65, 68, 73, 0);
     border-color: transparent;
