--- a/thanos.css
+++ b/thanos.css
@@ -44,6 +44,10 @@ background: var(--background-image);background-position: center;;background-size
     background-color: hsla(0, 0%, 12%, 0);
     border: 2px solid;
 }
+.valueUnchecked-2lU_20 {
+    background-color: #f04747;
+}
+
 .theme-dark .friends-table .messages .divider:before, .theme-dark .friends-table .messages .divider span, .theme-dark .messages-wrapper .messages .divider:before, .theme-dark .messages-wrapper .messages .divider span {
     background-color: rgba(54, 57, 62, 0);
 }
