--- a/thanos.css
+++ b/thanos.css
@@ -64,6 +64,9 @@ background: var(--background-image);background-position: center;;background-size
     animation-name: example;
     animation-duration: 4s;
 }
+#bd-settingspane-container .ui-switch-item .ui-switch-wrapper .ui-switch.checked {
+    background: #00b0f4;
+}
 @-webkit-keyframes example {
     from {background-color:#000000;}
     to {background-color: rgba(32, 34, 37, 0)}
