--- a/thanos.css
+++ b/thanos.css
@@ -73,6 +73,24 @@ background: var(--background-image);background-position: center;;background-size
     border-radius: 14px;
     transition: background .15s ease-in-out,box-shadow .15s ease-in-out,border .15s ease-in-out;
 }
+.chat .new-messages-bar {
+    -webkit-transition: background-color .2s;
+    background-color: #00b0f4;
+    border-radius: 0 0 5px 5px;
+    color: #fff;
+    cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-weight: 400;
+    left: 20px;
+    position: absolute;
+    right: 20px;
+    text-transform: capitalize;
+    top: 0;
+    transition: background-color .2s;
+    z-index: 2;
+}
 .unread-1Dp-OI {
     background-color: #b500f4;
     border-radius: 0 6px 6px 0;
