--- a/thanos.css
+++ b/thanos.css
@@ -47,6 +47,11 @@ background: var(--background-image);background-position: center;;background-size
 .theme-dark .chat .jump-to-present-bar {
     background-color: #43b581;
 }
+.lookFilled-1Gx00P.colorRed-1TFJan, .lookOutlined-3sRXeN.colorRed-1TFJan, [class="itemDefault-3Jdr52 item-PXvHYJ notSelected-1N1G5p"][style*="color: rgb(240, 71, 71);"] {
+    background-color: rgba(255, 0, 0, 0) !important;
+    color: #fff !important;
+    border: 2px solid #7289da;
+}
 .valueUnchecked-2lU_20 {
     background-color: #f04747;
 }
