--- a/thanos.css
+++ b/thanos.css
@@ -64,6 +64,10 @@ background: var(--background-image);background-position: center;;background-size
 .theme-dark .friends-table .messages .divider:before, .theme-dark .friends-table .messages .divider span, .theme-dark .messages-wrapper .messages .divider:before, .theme-dark .messages-wrapper .messages .divider span {
     background-color: rgba(54, 57, 62, 0);
 }
+.header-QKLPzZ {
+    padding: 20px;
+    background: #7289da;
+}
 .theme-dark .bar-2Qqk5Z {
     background: #f04747;
 }
