--- a/thanos.css
+++ b/thanos.css
@@ -58,6 +58,10 @@ background: var(--background-image);background-position: center;;background-size
 .theme-dark .body-3ND3kc {
     background-color: #7289da;
 }
+.theme-dark #friends .tab-bar .tab-bar-item.tab-bar-item-primary {
+    background-color: #00b0f4;
+    color: #fff;
+}
 .theme-dark .friends-table .messages .divider:before, .theme-dark .friends-table .messages .divider span, .theme-dark .messages-wrapper .messages .divider:before, .theme-dark .messages-wrapper .messages .divider span {
     background-color: rgba(54, 57, 62, 0);
 }
