--- a/thanos.css
+++ b/thanos.css
@@ -52,6 +52,10 @@ background: var(--background-image);background-position: center;;background-size
     color: #fff !important;
     border: 2px solid #7289da;
 }
+.theme-dark #friends .tab-bar .tab-bar-item.selected {
+    background-color: #8800f4;
+    color: #ffffff;
+}
 .valueUnchecked-2lU_20 {
     background-color: #f04747;
 }
