--- a/thanos.css
+++ b/thanos.css
@@ -44,6 +44,14 @@ background: var(--background-image);background-position: center;;background-size
     background-color: hsla(0, 0%, 12%, 0);
     border: 2px solid;
 }
+.theme-dark .modal-3HD5ck {
+    -webkit-box-shadow: 0 0 0 1px rgba(32, 34, 37, 0), 0 2px 10px 0 rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
+    box-shadow: 0 0 0 1px rgba(32, 34, 37, 0), 0 2px 10px 0 rgba(0,0,0,.2);
+    background-image: url(http://getwallpapers.com/wallpaper/full/c/f/2/167081.jpg);
+    background-position: top;
+    filter: brightness(50%);
+}
 .theme-dark .chat .jump-to-present-bar {
     background-color: #43b581;
 }
@@ -80,10 +88,6 @@ background: var(--background-image);background-position: center;;background-size
 .theme-dark .message-group .comment .markup .mention:hover {
     background-color: rgba(115, 139, 215, 0);
 }
-.content-8biNdB h1, .content-8biNdB h2, .content-8biNdB strong {
-    font-weight: 700;
-    color: blueviolet;
-}
 .valueUnchecked-2lU_20 {
     background-color: #f04747;
 }
@@ -113,10 +117,6 @@ background: var(--background-image);background-position: center;;background-size
 }
 .theme-dark .chat .jump-to-present-bar:hover {
     background-color: #f04747;
-}
-.theme-dark .content-8biNdB p, .theme-dark .content-8biNdB ul li {
-    color: #5800ff;
-    font-size: larger;
 }
 .message-group .mentioned .message-text:after {
     background: rgba(250, 166, 26, 0);
