--- a/thanos.css
+++ b/thanos.css
@@ -40,6 +40,10 @@ background: var(--background-image);background-position: center;;background-size
     font-size: small;
     text-shadow: 0 0 2px rgba(255, 255, 255, 0);
 }
+.theme-dark .body-3iLsc4, .theme-dark .footer-1fjuF6 {
+    background-color: rgba(47, 49, 54, 0);
+    color: hsla(0, 0%, 100%, 0.8);
+}
 .theme-dark .content-8biNdB p, .theme-dark .content-8biNdB ul li {
     color: #ffffff;
     font-size: larger;
