--- a/thanos.css
+++ b/thanos.css
@@ -89,6 +89,10 @@ background: var(--background-image);background-position: center;;background-size
     color: #fff !important;
     border: 2px solid #7289da;
 }
+.autocompleteInner-zh20B_ {
+    padding-bottom: 8px;
+    background-color: #7289da;
+}
 #friends .btn {
     background-color: #00b0f4;
     border-radius: 3px;
