--- a/thanos.css
+++ b/thanos.css
@@ -64,6 +64,24 @@ background: var(--background-image);background-position: center;;background-size
     margin-bottom: 10px;
     text-transform: uppercase;
 }
+.container-2Thooq {
+    -ms-flex-align: center;
+    -ms-flex-negative: 0;
+    -webkit-box-align: center;
+    align-items: center;
+    background: rgba(32,34,37,.3);
+    color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-shrink: 0;
+    font-size: 14px;
+    font-weight: 400;
+    height: 72px;
+    margin-bottom: 1px;
+    padding: 0 10px;
+    border-top: 6px solid #7600f4;
+}
 .theme-dark .modal-3HD5ck {
     -webkit-box-shadow: 0 0 0 1px rgba(32, 34, 37, 0), 0 2px 10px 0 rgba(0, 0, 0, 0);
     background-color: rgba(0, 0, 0, 0);
