--- a/thanos.css
+++ b/thanos.css
@@ -64,6 +64,24 @@ background: var(--background-image);background-position: center;;background-size
     margin-bottom: 10px;
     text-transform: uppercase;
 }
+.bda-dark #bda-qem-favourite-container, .bda-dark #bda-qem-twitch-container {
+    background-color: #00b0f4;
+}
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
+    background-color: #00b0f4;
+}
+.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
+    background-color: #00b0f4;
+}
+.emojiPicker-3m1S-j .category-2U57w6 {
+    color: #ffffff;
+    font-size: 12px;
+    font-weight: 500;
+    height: 32px;
+    line-height: 32px;
+    padding: 0 4px;
+    text-transform: uppercase;
+}
 .container-2Thooq .avatar-small {
     -ms-flex-negative: 0;
     cursor: pointer;
